# research

./: CLAUDE.md
gazettes/preprocess/: .gitignore  MANIFEST.in  main.py  pyproject.toml  readme.md  utils.py
gazettes/preprocess/gztp-frontend/: package-lock.json  package.json
gazettes/preprocess/gztp-frontend/src/: AddGazette.jsx  AmendmentPreview.jsx  App.css  App.jsx  InitialPreview.jsx  StateTable.jsx  TransactionPreview.jsx  main.jsx
gazettes/preprocess/gztprocessor/: csv_writer.py
gazettes/preprocess/gztprocessor/database_handlers/: mindep_database_handler.py  person_database_handler.py  transaction_database_handler.py
gazettes/preprocess/gztprocessor/db_connections/: db_gov.py  db_person.py  db_trans.py
gazettes/preprocess/gztprocessor/gazette_processors/: mindep_gazette_processor.py  person_gazette_processor.py
gazettes/preprocess/gztprocessor/schemas/: mindep_schema.sql  person_schema.sql  (+1 more)
gazettes/preprocess/routes/: mindep_router.py  person_router.py  state_router.py  transaction_router.py
hugging-face-deepseek-ocr/: .gitignore  .gitmodules  README.md  init.sh  init_v2.sh  ocr_app.py  ocr_workflow.py  ocr_workflow_v2.py  pyproject.toml  run_workflow.sh  setup.sh  setup_v2.sh
hugging-face-deepseek-ocr/input/orgchart/: prompt.txt  schema.json
hugging-face-deepseek-ocr/input/tourism/: prompt.txt  schema.json
hugging-face-deepseek-ocr/output/orgchart/: output.json
hugging-face-deepseek-ocr/output/orgchart_workflow_v2/: workflow_metrics.json
hugging-face-deepseek-ocr/output/test/: DeepSeek_OCR_paper.mmd  DeepSeek_OCR_paper_det.mmd
(+373 files in other folders)
